[tool.poetry]
name = "bsuir-schedule-parser"
version = "0.1.0"
description = "Парсер расписания BSUIR с обновлением Google Calendar"
authors = ["Stanislav <email@example.com>"]
packages = [
    { include = "*" }
]

[tool.poetry.dependencies]
python = "^3.13"
google-api-python-client = "^2.181.0"
google-auth = "^2.40.3"
google-auth-oauthlib = "^1.2.2"
google-auth-httplib2 = "^0.2.0"
requests = "^2.32.5"
requests-oauthlib = "^2.0.0"
httplib2 = "^0.30.0"
protobuf = "^6.32.0"
python-dotenv = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
